--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "addressit",
   "description": "Freeform Street Address Parser",
-  "main": "addressit.js",
+  "main": "index.js",
   "author": "Damon Oehlman <damon.oehlman@gmail.com>",
   "version": "1.7.0",
   "stability": "stable",
